Revision history for perl distribution OpenAPI-Client

1.03 Not Released
 - Fix documentation issues regarding "base_url" #33
 - Fix "mojo client ..." with 3.0.x spec

1.02 2021-08-28T16:49:50+0200
 - Add support for kebab case in path templating #32
   Contributor: Roy Storey

1.01 2021-06-17T12:45:28+0900
 - Fix generating correct base URL for OpenAPIv3 schemas

1.00 2021-02-23T15:25:00+0900
 - Updated to use new JSON::Validator schema API
 - Add support for JSON::Validator::Schema::OpenAPIv3
 - Removed pre_processor()

0.25 2020-06-30T18:45:37+0900
 - Fix setting correct request method on client errors

0.24 2019-05-05T14:36:11+0700
 - Fix t/command-local-with-ref.t

0.23 2019-05-05T14:13:14+0700
 - Add documentation for option --information|-I
 - Fix deprecation warning for JSON::Validator->coerce(1) #17
 - Fix printing YAML::XS::Boolean as "false" and "true" in dumped
   documentation
 - Printed documentation has $ref resolved
   Can be turned off with JSON_VALIDATOR_REPLACE=0

0.22 2019-01-25T14:45:56+0900
 - Updated documentation to use $client instead of $self

0.21 2018-10-03T16:19:00+0900
 - Fix failing tests after Mojolicious::Plugin::OpenAPI 2.00 #15

0.20 2018-09-30T22:04:20+0900
 - Fix skip tests when getting "Service Unavailable"

0.19 2018-09-26T13:56:14+0900
 - Skip tests when getting "Service Unavailable"

0.18 2018-09-02T14:13:51+0200
 - Add "after_build_tx" event
 - Add "opeartionId_p" methods for promise based API

0.17 2018-08-02T16:00:20+0800
 - Fix duplicate keys in test #13

0.16 2018-07-06T16:08:35+0800
 - Fix "host" can contain port #12

0.15 2018-02-15T22:35:36+0100
 - Require JSON::Validator 2.03

0.14 2017-12-23T17:10:22+0100
 - Add call_p() that returns a Mojo::Promise

0.13 2017-12-11T19:04:35+0100
 - Add default coercion to input parameters
 - Add call() for calling "invalid" operationIds names
 - Fix "openapi" client when printing data structures #8

0.12 2017-12-09T11:15:28+0100
 - Bumping dependencies
