@@ -3,6 +3,7 @@ Revision history for perl distribution OpenAPI-Client
 1.03 Not Released
  - Fix documentation issues regarding "base_url" #33
  - Fix "mojo client ..." with 3.0.x spec
+ - Changed -I to also be able to dump the whole spec (bundled)
 
 1.02 2021-08-28T16:49:50+0200
  - Add support for kebab case in path templating #32
